# google-drive-to-github-sync

./: .drive-sync.yml.example  .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: release.yml  sync.yml
src/drive_sync/: __init__.py  cli.py  config.py  converter.py  drive_client.py  frontmatter.py  slugify.py  sync.py
tests/: __init__.py  test_config.py  test_converter.py  test_drive_client.py  test_frontmatter.py  test_slugify.py  test_sync.py
